# api-doc/swagger.yaml
@@ -556,6 +556,10 @@ definitions:
         type: string
       expires_in:
         type: integer
+      refresh_expires_in:
+        type: integer
+      refresh_token:
+        type: string
     type: object
   security.RefreshTokenInput:
     properties:
